--- a/.gitignore
+++ b/.gitignore
@@ -29,7 +29,9 @@
 .packages
 .pub-cache/
 .pub/
-/build/
+
+/build/flutter_assets
+/build/cache.dill.track.dill
 
 # Web related
 lib/generated_plugin_registrant.dart
